# ioConnect

./: README.md
core/: CMakeLists.txt  CONTRIBUTING.md  DeviceConnect_Core.c  DeviceConnect_Core.h  Doxyfile  README.md  library.json  library.properties  readme.md
core/crypto/: aes_decrypt.c  cmac_mode.c  ecc_dh.c  ecc_dsa.c  hmac.c  sha256.c  utils.c
core/doc/: How_to_create_a_w3bstream_studio_project.md
core/hal/flash/soc/esp32/: flash.c
core/hal/nvs/: nvs_common.c
core/hal/nvs/soc/esp32/: nvs_esp32.c  nvs_esp32_secure.c
core/include/backends/tinycryt/: cbc_mode.h  cmac_mode.h  ctr_mode.h  ctr_prng.h  ecc_dsa.h  hmac.h  hmac_prng.h
core/include/backends/tinycryt/tests/: test_ecc_utils.h  test_utils.h
core/include/config/: autoconfig.h  iotex_layer_config.h  iotex_layer_config_check.h  iotex_layer_config_origin.h
core/include/hal/nvs/: nvs_common.h
core/include/iotex/: aes.h  asn1.h  camellia.h  chachapoly.h  cmac.h  config_psa.h  des.h  ecdsa.h  entropy.h  error.h  gcm.h  md5.h  pk.h  platform.h  psa_crypto_random_impl.h  psa_util.h  sha1.h  sha512.h
core/include/psa/: client.h  service.h
core/include/server/: crypto.h  crypto_builtin_composites.h  crypto_builtin_primitives.h  crypto_driver_common.h  crypto_driver_contexts_composites.h  crypto_driver_contexts_primitives.h  crypto_extra.h  crypto_platform.h  crypto_sizes.h  crypto_struct.h  pk_wrap.h
core/include/server/acc/: acc_driver_hash.h  acc_driver_rsa.h
core/include/server/crypto/: psa_crypto_cipher.h  psa_crypto_core.h  psa_crypto_driver_wrappers.h  psa_crypto_hash.h  psa_crypto_its.h  psa_crypto_random_impl.h  psa_crypto_se.h  psa_crypto_slot_management.h
core/include/utils/: iotex_dev_access.h
core/include/utils/LowerS/: LowerS.h
core/include/utils/ProtoBuf/: devnet_upload.pb.h  header.pb.h  payload.pb.h  pb_encode.h  protobuf.h
core/include/utils/base64/: base64.h
core/psa/: Kconfig  psa_crypto.c  psa_crypto_client.c  psa_crypto_driver_wrappers.c  psa_crypto_porting.c  psa_crypto_slot_management.c  psa_crypto_storage.c  psa_its_file.c  psa_its_nvs.c
core/psa/acc/: acc_driver_cipher.c  acc_driver_hash.c  acc_driver_rsa.c
core/src/: DeviceConnect_Core.cpp  DeviceConnect_Core.h
core/src/crypto/: aes_decrypt.c  aes_encrypt.c  cbc_mode.c  ccm_mode.c  cmac_mode.c  ctr_mode.c  ctr_prng.c  ecc.c  ecc_dh.c  ed_dsa.c  field_element.c  group_element.c  hmac_prng.c  sc.c  sha512.c
core/src/dids/did/: did.c  did_io.c  did_key.c  registry.c
core/src/dids/didcomm/: from_prior.c  message.c
core/src/dids/vc/: vc.c
core/src/doc/: WASM_Development_Notes(RUST).md  WSIoTSDK_User_Manual.md
core/src/hal/: Kconfig
core/src/hal/flash/: flash_common.c
core/src/hal/nvs/: nvs_common.c
core/src/include/: common.h
core/src/include/backends/tinycryt/: aes.h  ccm_mode.h  ecc.h  ecc_dh.h  ed_dsa.h  fe.h  ge.h  sha512.h
core/src/include/config/: autoconfig.h  autoconfig_arduino.h  iotex_layer_config.h
core/src/include/dids/: common.h  dids.h
core/src/include/dids/did/: did.h  did_io.h  did_key.h  registry.h
core/src/include/dids/didcomm/: encrypted.h  envelope.h  from_prior.h  message.h
core/src/include/dids/vc/: vc.h
core/src/include/hal/flash/: flash_common.h
core/src/include/iotex/: asn1write.h  bignum.h  build_info.h  ccm.h  chacha20.h  cipher.h  config_psa.h  ctr_drbg.h  ecdh.h  ecp.h  eddsa.h  hmac_drbg.h  iotex_crypto_all.h  md.h  oid.h  platform.h  platform_time.h  platform_util.h  poly1305.h  psa_crypto_random_impl.h  ripemd160.h  rsa.h  sha256.h  sha512.h
core/src/include/jose/: common.h  jose.h  jwe.h  jwk.h  jws.h  jwt.h
core/src/include/psa/: crypto.h  crypto_extra.h  initial_attestation.h  internal_trusted_storage.h  protected_storage.h
core/src/include/server/: cipher_wrap.h  crypto_builtin_composites.h  crypto_builtin_primitives.h  crypto_extra.h  crypto_platform.h  crypto_se_driver.h  crypto_sizes.h  crypto_types.h  md_wrap.h
core/src/include/server/acc/: acc_driver_cipher.h
core/src/include/server/crypto/: psa_crypto_aead.h  psa_crypto_all.h  psa_crypto_ecp.h  psa_crypto_invasive.h  psa_crypto_mac.h  psa_crypto_random_impl.h  psa_crypto_rsa.h  psa_crypto_storage.h
core/src/include/utils/: iotex_dev_access.h
core/src/include/utils/LowerS/: LowerS.h
core/src/include/utils/ProtoBuf/: packconfirm.pb.h  pb_common.h  pb_decode.h
core/src/include/utils/baseX/: base58.h  base64.h
core/src/include/utils/convert/: convert.h
core/src/include/utils/devRegister/: devRegister.h
core/src/include/utils/keccak256/: keccak256.h
core/src/jose/: jwe.c  jwk.c  jws.c  jwt.c
core/src/psa/: Kconfig copy  cipher_wrap.c  psa_crypto.c  psa_crypto_aead.c  psa_crypto_cipher.c  psa_crypto_client.c  psa_crypto_ecp.c  psa_crypto_hash.c  psa_crypto_porting.c  psa_crypto_rsa.c  psa_crypto_slot_management.c  psa_crypto_storage.c  psa_its_file.c  psa_its_flash.c  psa_its_nvs.c
core/src/utils/: Kconfig  iotex_dev_access.c  iotex_util_api.c
core/src/utils/LowerS/: LowerS.c
core/src/utils/ProtoBuf/: header.pb.c  packconfirm.pb.c  payload.pb.c  pb_common.c  pb_decode.c  pb_encode.c
core/src/utils/baseX/: base58.c  base64.c
core/src/utils/cJSON/: cJSON.c
core/src/utils/convert/: convert.c
core/src/utils/devRegister/: devRegister.c
core/src/utils/keccak256/: keccak256.c
core/utils/: iotex_dev_access.c
core/utils/ProtoBuf/: devnet_upload.pb.c  pb_common.c
core/utils/base64/: base64.c
example/esp32/deviceregister_serial/main/: CMakeLists.txt  ioConnect_main.c
example/esp32/dids/main/: CMakeLists.txt  idf_component.yml  ioConnect_main.c  tcp_client_v4.c
example/linux/deviceregister/: CMakeLists.txt  main.c
example/linux/deviceregister/doc/: readme.md
example/linux/dids/: CMakeLists.txt  main.c
example/linux/dids/doc/: readme.md
pal/Arduino/Seeed/: CHANGELOG.md  CMakeLists.txt  Doxyfile  keywords.txt  library.properties
pal/Arduino/Seeed/doc/: DeviceConnect_Manual_Arduino.md
pal/Arduino/Seeed/examples/DeviceConnect/: DeviceConnect.ino  upload_data_test.h
pal/Arduino/Seeed/src/: DeviceConnect_PAL.cpp  upload_data.h
pal/ESP32/: ws_mqtt.c  (+6 more)
(+81 files in other folders)
